--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apex_pmd",
-  "version": "0.0.0-development",
+  "version": "2.5.0",
   "description": "Apex_PMD",
   "author": "D.Z.",
 
